--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up / Login & Preferences with Timer</title>
+    <title>Basic Workout</title>
     <style>
         /* General Body Styling */
         body {
@@ -58,7 +58,10 @@
             display: none;
         }
 
-        h1, h2 {
+        h1 {
+            text-align: center;
+        }
+        h2 {
             color: #333;
             font-weight: normal;
         }
@@ -114,7 +117,7 @@
 </head>
 <body>
 
-    <h1>Sign Up / Login</h1>
+    <h1>1 Minute Workouts</h1>
     <form id="authForm">
         <input type="text" id="firstName" placeholder="First Name" required><br>
         <input type="text" id="lastName" placeholder="Last Name" required><br>
